--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-	"name": "ast project 2017",
-	"description": "simple project for ECE Paris",
-	"version": "0.0.1",
-	"dependencies": {
-		"body-parser": "^1.15.2"
-	},
-	"devDevpencies": {},
-	"main": "./index.js",
-	
+  "name": "ast project 2017",
+  "description": "simple project for ECE Paris",
+  "version": "0.0.1",
+  "scripts": {
+  	"start": "./bin/start",
+  	"test": "./bin/test tests/*"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "mocha": "^4.0.1",
+    "should": "^13.1.1"
+  },
+  "devDevpencies": {}
 }
