replacing spaces with underscore in the name in the package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ast project 2017",
+  "name": "ast_project_2017",
   "description": "simple project for ECE Paris",
   "version": "0.0.1",
   "scripts": {
